fix(menu): popover outline and shadow clipping

--- a/packages/ui-react/src/components/VideoList/VideoList.module.scss
+++ b/packages/ui-react/src/components/VideoList/VideoList.module.scss
@@ -5,7 +5,6 @@
 
 .container {
   height: 100%;
-  overflow: visible;
 }
 
 .content {
